--- a/public/index.html
+++ b/public/index.html
@@ -62,35 +62,56 @@
             };
 
             const analyzeLinks = async () => {
-                const valid = links.filter(l => l.trim());
-                if (valid.length === 0) {
-                    setError('Enter at least one YouTube link');
-                    return;
-                }
+    const valid = links.filter(l => l.trim());
+    if (valid.length === 0) {
+        setError('Please enter at least one YouTube link');
+        return;
+    }
 
-                setError('');
-                setResults('');
-                setLoading(true);
+    setError('');
+    setResults('');
+    setLoading(true);
 
-                try {
-                    const transcripts = [];
+    try {
+        const transcripts = [];
 
-                    for (let i = 0; i < valid.length; i++) {
-                        setProgress(`📥 Fetching transcript ${i + 1} of ${valid.length}...`);
-                        const videoId = extractVideoId(valid[i]);
-                        if (!videoId) throw new Error(`Invalid YouTube URL: ${valid[i]}`);
-                        const transcript = await fetchTranscript(videoId);
-                        transcripts.push({ url: valid[i], videoId, transcript });
-                    }
+        for (let i = 0; i < valid.length; i++) {
+            setProgress(`📥 Fetching transcript ${i + 1} of ${valid.length}...`);
+            const videoId = extractVideoId(valid[i]);
+            
+            if (!videoId) {
+                throw new Error(`Invalid YouTube URL: ${valid[i]}\n\nPlease use format: https://youtube.com/watch?v=VIDEO_ID`);
+            }
+            
+            try {
+                const transcript = await fetchTranscript(videoId);
+                transcripts.push({ url: valid[i], videoId, transcript });
+            } catch (transcriptError) {
+                // Provide helpful error for missing captions
+                throw new Error(
+                    `❌ Could not fetch transcript for video ${i + 1}\n\n` +
+                    `Video: ${valid[i]}\n\n` +
+                    `Possible reasons:\n` +
+                    `• Video doesn't have captions/subtitles enabled\n` +
+                    `• Captions are disabled by the creator\n` +
+                    `• Video is age-restricted or private\n\n` +
+                    `✅ How to check:\n` +
+                    `1. Open the video on YouTube\n` +
+                    `2. Look for the CC (closed captions) button\n` +
+                    `3. If there's no CC button or it says "unavailable", this video can't be analyzed\n\n` +
+                    `💡 Try a different video with captions enabled!`
+                );
+            }
+        }
 
-                    setProgress('🤖 Analyzing with Claude AI...');
+        setProgress('🤖 Analyzing with Claude AI...');
 
-                    const transcriptText = transcripts.map((t, i) => 
-                        `VIDEO ${i + 1}: ${t.url}\n\nTRANSCRIPT:\n${t.transcript}`
-                    ).join('\n\n---\n\n');
+        const transcriptText = transcripts.map((t, i) => 
+            `VIDEO ${i + 1}: ${t.url}\n\nTRANSCRIPT:\n${t.transcript}`
+        ).join('\n\n---\n\n');
 
-                    const prompt = transcripts.length === 1
-                        ? `Analyze this YouTube video transcript and provide:
+        const prompt = transcripts.length === 1
+            ? `Analyze this YouTube video transcript and provide:
 
 ## Key Insights
 - Main concepts, strategies and lessons
@@ -107,7 +128,7 @@
 
 TRANSCRIPT:
 ${transcriptText}`
-                        : `Compare and synthesize these ${transcripts.length} YouTube videos:
+            : `Compare and synthesize these ${transcripts.length} YouTube videos:
 
 ## Consensus Views
 - What all videos agree on
@@ -128,39 +149,16 @@ ${transcriptText}`
 TRANSCRIPTS:
 ${transcriptText}`;
 
-                    const analysis = await analyzeWithClaude(prompt);
-                    setResults(analysis);
+        const analysis = await analyzeWithClaude(prompt);
+        setResults(analysis);
 
-                } catch (err) {
-                    setError(err.message);
-                } finally {
-                    setLoading(false);
-                    setProgress('');
-                }
-            };
-
-            const searchAndAnalyze = async () => {
-                if (!topic.trim()) {
-                    setError('Enter a topic or video title');
-                    return;
-                }
-
-                setError('');
-                setResults('');
-                setLoading(true);
-
-                try {
-                    setProgress(`🔍 Searching for videos on "${topic}"...`);
-
-                    const mockVideos = {
-                        'trading psychology': [
-                            'dQw4w9WgXcQ',
-                            'dQw4w9WgXcQ',
-                            'dQw4w9WgXcQ'
-                        ]
-                    };
-
-                    const prompt = `I want to learn about "${topic}". Based on your knowledge, provide a comprehensive analysis as if you had watched ${count} expert videos on this topic:
+    } catch (err) {
+        setError(err.message);
+    } finally {
+        setLoading(false);
+        setProgress('');
+    }
+};
 
 ## Consensus Views
 - What most experts agree on about ${topic}
