--- a/public/index.html
+++ b/public/index.html
@@ -243,21 +243,21 @@ Please be specific, detailed and practical. Focus on actionable insights.`;
                             Extract insights from YouTube videos with AI
                         </p>
 
-                        <div className="flex gap-0 mb-0">
+                        <div className="flex gap-0 mb-0 border-b border-purple-500/10">
                             <button onClick={() => setMode('links')}
-                                className={`flex-1 py-4 px-6 font-semibold transition-all ${
+                                className={`flex-1 py-4 px-6 font-semibold transition-all relative ${
                                     mode === 'links' 
-                                    ? 'bg-slate-800/50 border-t border-l border-r border-purple-500/20 rounded-t-2xl' 
-                                    : 'bg-slate-900/30 border-b border-purple-500/10 text-gray-400 hover:text-white'
+                                    ? 'bg-slate-800/50 border-t border-l border-r border-purple-500/20 rounded-t-2xl -mb-px' 
+                                    : 'bg-slate-900/30 text-gray-400 hover:text-white'
                                 }`}>
                                 <div className="font-bold">Paste YouTube Links</div>
                                 <div className="text-xs mt-1 opacity-70">Auto-fetch transcripts</div>
                             </button>
                             <button onClick={() => setMode('search')}
-                                className={`flex-1 py-4 px-6 font-semibold transition-all ${
+                                className={`flex-1 py-4 px-6 font-semibold transition-all relative ${
                                     mode === 'search' 
-                                    ? 'bg-slate-800/50 border-t border-l border-r border-purple-500/20 rounded-t-2xl' 
-                                    : 'bg-slate-900/30 border-b border-purple-500/10 text-gray-400 hover:text-white'
+                                    ? 'bg-slate-800/50 border-t border-l border-r border-purple-500/20 rounded-t-2xl -mb-px' 
+                                    : 'bg-slate-900/30 text-gray-400 hover:text-white'
                                 }`}>
                                 <div className="font-bold">Search by Topic</div>
                                 <div className="text-xs mt-1 opacity-70">AI knowledge synthesis</div>
@@ -265,7 +265,7 @@ Please be specific, detailed and practical. Focus on actionable insights.`;
                         </div>
 
                         {mode === 'links' && (
-                            <div className="bg-slate-800/50 backdrop-blur rounded-b-2xl rounded-tr-2xl p-6 md:p-8 mb-8 border border-purple-500/20">
+                            <div className="bg-slate-800/50 backdrop-blur rounded-b-2xl rounded-tr-2xl p-6 md:p-8 mb-8 border-l border-r border-b border-purple-500/20">
                                 <h2 className="text-xl font-bold text-purple-300 mb-2">
                                     Paste YouTube Links
                                 </h2>
@@ -299,7 +299,7 @@ Please be specific, detailed and practical. Focus on actionable insights.`;
                         )}
 
                         {mode === 'search' && (
-                            <div className="bg-slate-800/50 backdrop-blur rounded-b-2xl rounded-tl-2xl p-6 md:p-8 mb-8 border border-purple-500/20">
+                            <div className="bg-slate-800/50 backdrop-blur rounded-b-2xl rounded-tl-2xl p-6 md:p-8 mb-8 border-l border-r border-b border-purple-500/20">
                                 <h2 className="text-xl font-bold text-purple-300 mb-2">
                                     Search by Topic
                                 </h2>
