--- a/public/index.html
+++ b/public/index.html
@@ -236,15 +236,14 @@ Please be specific, detailed and practical. Focus on actionable insights.`;
             return (
                 <div className="min-h-screen p-8">
                     <div className="max-w-5xl mx-auto">
-                        <div className="mb-20">
-                            <h1 className="text-5xl font-bold text-center mb-4 bg-gradient-to-r from-purple-400 to-pink-400 bg-clip-text text-transparent">
-                                YouTube Insights Analyzer
-                            </h1>
-                            <p className="text-center text-gray-300 text-lg">
-                                Extract insights from YouTube videos with AI
-                            </p>
-                        </div>
-
+                       <div className="mb-12">
+    <h1 className="text-5xl font-bold text-center mb-4 bg-gradient-to-r from-purple-400 to-pink-400 bg-clip-text text-transparent leading-tight pb-2">
+        YouTube Insights Analyzer
+    </h1>
+    <p className="text-center text-gray-300 text-lg">
+        Extract insights from YouTube videos with AI
+    </p>
+</div>
                         <div className="bg-slate-800/50 backdrop-blur rounded-2xl border border-purple-500/20 mb-8">
                             <div className="flex border-b border-purple-500/10">
                                 <button onClick={() => setMode('links')}
